--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
+    "autoprefixer": "^10.4.19",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.1.6",
     "vitest": "^1.4.0"
   }
