--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-material-design-icons": "^5.3.0",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
